...
        let label = UILabel()
        
        label.font = UIFont.topTraxxFontRegular17
        label.numberOfLines = 0
        label.textAlignment = .center
        label.textColor = UIColor.topTraxxWhite
        label.text = "We require Spotify Premium."
        return label
    }()

    /// Hint button is used to show an alertView to users that don't have a Spotify account.
    private lazy var hintButton: UIButton = {
        let button = UIButton(type: UIButtonType.custom)
...
    
    private lazy var loginButton: UIButton = {
        let button = UIButton(type: UIButtonType.custom)
        button.layer.cornerRadius = 30
        button.clipsToBounds = true
        button.addTarget(self, action: #selector(loginButtonTouched), for: .touchUpInside)
        button.setTitle("Login", for: .normal)
        button.setTitleColor(UIColor.topTraxxBlack, for: .normal)
        button.backgroundColor = UIColor.topTraxxAccent
        
        return button
    }()
    
...
