...
        
        return tracksCollectionView
    }()
    
    /// button to Logout of the App and kill Spotift session
    private lazy var logoutBarButtonItem: UIBarButtonItem = {
        let barButtonItem = UIBarButtonItem(title: "Logout", style: UIBarButtonItemStyle.plain, target: self, action: #selector(logoutButtonTapped))

        barButtonItem.tintColor = UIColor.topTraxxBlack
        barButtonItem.setTitleTextAttributes([NSAttributedStringKey.font: UIFont.topTraxxFontRegular15, NSAttributedStringKey.foregroundColor: UIColor.topTraxxAccentDark as Any], for: .normal)

        return barButtonItem
    }()
...
